
        * 0.6.6
        
        * Added some speedups to ChangeStore, which now uses an internal
        HashMap to find the latest change.  Also, changed the internal
        implementation from LinkedList to ArrayList which speeds up
        iteration performance.  This gives approx four times the speed
        increase to very large remove() and save() operations.
        
2009-12-24  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.6.5
        
        * Fixed an off-by-one problem with SNS reordering; all internal
        unit tests run now too!
        
        * Speeded up NodeImpl.getUUID() in case the UUID didn't exist.
        
        * 0.6.4
        
        * Fixed some more issues with SNS reordering. This version now
        passes the JSR-170 TCK with zero errors or failures.
        
        * Merry Christmas!

2009-12-23  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.6.3

        * Solved a fairly hairy graph matching issue in SimpleQueryProvider,
        and I think finally deep queries work as they are meant to work. Yay!
        
2009-12-22  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.6.2
        
        * Rewrote ItemState handling to clean up some cases where
        ChangeStore got awfully confused as to when something was updated
        or not.  This also fixes some problems with SNS handling, which
        isn't still perfect though. It also changes reliability of
        multiple move()s in a single Session.

2009-12-05  Janne Jalkanen <jalkanen@ecyrd.com>

        * Bug 7: Running perftest is now possible even when Jackrabbit
        does not exist. Thanks to Kees Kuip.
        
        * Bug 6: compile and compiletests -targets had wrong dirsets.
        Thanks to Kees Kuip pointing this out.

		* ant clean would also delete generated sources - needing a
		svn update. Now fixed.

2009-11-24  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.6.1
        
        * Slightly improved FileProvider serialization algorithm - the